# rust-auth-srv

./: Cargo.toml  README.md
src/: auth.rs  error.rs  main.rs
