[package]
name = "rust-auth-srv"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["rt-threaded", "macros", "sync", "time"] }
chrono = "0.4"
thiserror = "1.0"
jsonwebtoken = "7.2"
warp = "0.2"
serde_json = "1.0"
